# agent-loop-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  model-pricing.example.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  admin_routes.py  anthropic_routes.py  common.py  mcp_routes.py  openai_routes.py  playground_routes.py  replay_routes.py  ui_routes.py
app/benchmark/: __init__.py  adapters.py  dataset.py  models.py  runner.py  scorers.py  statistics.py  storage.py
app/benchmark/data/: starter-v1.json
app/core/: config.py  demo.py  loop_detector.py  policy_engine.py  redaction.py  security.py  token_meter.py
app/db/: models.py  repository.py  session.py
app/issuepilot/: __init__.py  core.py
app/mcp/: __init__.py  gateway.py  policy.py  stdio.py
app/mcp/presets/: development.yml  filesystem.yml
app/platform/: __init__.py  events.py  maintenance.py  migrations.py  setup.py
app/platform/alembic/: __init__.py  env.py
app/platform/alembic/versions/: 0001_initial_schema.py  __init__.py
app/playground/: __init__.py  service.py
app/providers/: __init__.py  base.py  mock.py  upstream.py
app/replay/: __init__.py  costs.py  formats.py  sdk.py
app/reprolab/: __init__.py  core.py
app/sandbox/: __init__.py  policy.py  workspace.py
app/static/: styles.css
app/templates/: agents.html  base.html  dashboard.html  demo.html  mcp.html  playground.html  policies.html  replay.html  replay_compare.html  replay_detail.html  session_detail.html  sessions.html  settings.html
docs/: architecture.md  index.md  security.md  status.md  troubleshooting.md
docs/development/: contributing.md  releasing.md  testing.md
docs/getting-started/: agent-setup.md  configuration.md  installation.md  quickstart.md
docs/guides/: benchmark.md  guard.md  issuepilot.md  mcp-firewall.md  operations.md  playground.md  replay.md  reprolab.md  sandbox.md  vscode.md
docs/reference/: api.md  cli.md  events.md  mcp-policy.md
docs/ru/: index.md
docs/specs/: Agent_Loop_Guard_spec.docx
extensions/vscode/: .vscodeignore  LICENSE.md  README.md  extension.js  package.json
tests/integration/: test_mcp.py  test_mcp_stdio.py  test_platform.py  test_playground.py  test_proxy.py  test_replay.py  test_sandbox_docker.py
tests/unit/: test_benchmark.py  test_loop_detector.py  test_mcp_policy.py  test_policy_engine.py  test_portfolio_modules.py  test_redaction.py  test_replay_sdk.py  test_sandbox.py  test_security.py
