[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop-guard-runtime"
version = "0.8.0a1"
description = "Local runtime guard for coding agents with loop detection and explainable policy decisions."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Agent Loop Guard contributors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
mcp = []
bench = [
    "duckdb>=1.1",
    "mlflow>=3.0",
    "pyarrow>=17.0",
]
sandbox = []
docs = [
    "mkdocs-material>=9.5",
]
dev = [
    "coverage[toml]>=7.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/RIMUMURUDEV/agent-loop-guard"
Repository = "https://github.com/RIMUMURUDEV/agent-loop-guard.git"
Issues = "https://github.com/RIMUMURUDEV/agent-loop-guard/issues"

[project.scripts]
alg = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
    "templates/*.html",
    "static/*.css",
    "mcp/presets/*.yml",
    "benchmark/data/*.json",
    "platform/alembic/*.mako",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app/core"]
branch = true
